--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,9 @@
 		"Service Oriented Architechture",
 		"Enterprise",
 		"HA",
-		"metronic",
-		"Authentication"
+		"metronic"
 	],
-	"version" : "0.*",
+	"version" : "v0.7.1",
 	"homepage" : "https://chglongstone.github.io/just-core-metronic",
 	"require" : {
 		"php" : ">=5.3.3"
