--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name" : "just-core/metronic",
 	"description" : "support for metronic templates in the just-core eco system",
-	"license" : "GNU",
+	"license" : "GPL-3.0-or-later",
 	"keywords" : [
 		"just-core",
 		"Service Oriented Architechture",
